# rusty-beads

./: .gitignore  .travis.yml  Cargo.toml  README.md  build-wasm.sh  rusty-beads.js  rusty-beads_bg.wasm  rusty_beads.js  rusty_beads_bg.wasm
.github/workflows/: build-and-deploy.yml  make-release.yml
site/: index.html
src/: app.rs  beads.rs  convert.rs  entities.rs  field.rs  grid.rs  icon.rs  io.rs  io_wasm.rs  lib.rs  line_settings.rs  main.rs  menu.rs  message.rs  model.rs  palette.rs  pallette.rs  reimport.rs  settings.rs  style.rs  summary.rs  ui.rs  wrapper.rs
src/io/: mod.rs
src/model/: beads.rs  color.rs  faces.rs  grid.rs  line_builder.rs  mod.rs  model.rs  palette.rs  schema.rs  undo.rs
src/service/: grid.rs  io.rs  message.rs  mod.rs
src/ui/: files.rs  grid.rs  icon.rs  menu.rs  mod.rs  palette.rs  pallette.rs  panel.rs  widget.rs
src/ui/style/: mod.rs
