[package]
name = "beads-and-threads"
version = "2.0.0"
authors = ["Serge Barinov <bool.rus@gmail.com>"]
edition = "2018"

[dependencies]
quick-csv = "*"
dirs = '*'
colors = { package = 'palette', version = "0.5.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = '1.0'
egui = "0.19.0"
eframe = "0.19.0"
indexmap = "1.9.2"

[dev-dependencies]
rand = "0.8"
