[package]
name = "rusty-beads"
version = "2.0.0"
authors = ["Serge Barinov <bool.rus@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = '1.0'
egui = { version = "0.19.0", features = ["serde"] }
eframe = "0.19.0"
indexmap = "1.9.2"
rfd = "0.10.0"

[dev-dependencies]
rand = "0.8"
