[package]
name = "rusty-beads"
version = "2.1.0"
authors = ["Serge Barinov <bool.rus@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = '1.0'
egui = { version = "0.21", features = ["serde"] }
eframe = "0.21"
indexmap = "1"
rfd = "0.11"

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "*"

[dev-dependencies]
rand = "0.8"
